@@ -4,6 +4,10 @@ package Munin;
 # $Id$
 #
 # $Log$
+# Revision 1.8  2004/05/20 22:30:08  jimmyo
+# * Munin-limits added to distro.
+# * Breached limis now show up in overview and node view.
+#
 # Revision 1.7  2004/05/20 20:47:19  jimmyo
 # The server programs now open the log file at an earlier point.
 #
@@ -107,6 +111,9 @@ use Exporter;
 	   'munin_get_bool_val',
 	   'munin_get_val',
 	   'munin_field_status',
+	   'munin_service_status',
+	   'munin_node_status',
+	   'munin_category_status',
 	   'munin_get_filename');
 
 use strict;
@@ -690,80 +697,119 @@ sub munin_get_val
     }
 }
 
+sub munin_node_status
+{
+    my ($config, $limits, $domain, $node) = @_;
+    my $state = "ok";
+
+    return undef unless defined $config->{domain}->{$domain}->{node}->{$node};
+    my $snode = $config->{domain}->{$domain}->{node}->{$node};
+
+    foreach my $service (keys %{$snode})
+    {
+	my $fres  = &munin_service_status ($config, $limits, $domain, $node, $service);
+	if (defined $fres)
+	{
+	    if ($fres eq "critical")
+	    {
+		$state = $fres;
+		last;
+	    }
+	    elsif ($fres eq "warning")
+	    {
+		$state = $fres;
+	    }
+	}
+    }
+
+    return $state;
+}
+
+sub munin_category_status
+{
+    my ($config, $limits, $domain, $node, $category) = @_;
+    my $state = "ok";
+
+    return undef unless defined $config->{domain}->{$domain}->{node}->{$node};
+    my $snode = $config->{domain}->{$domain}->{node}->{$node};
+
+    foreach my $service (keys %{$snode->{client}})
+    {
+	next if ((not defined $snode->{client}->{$service}->{graph_category}) and
+		$category ne 'other');
+	next if ((defined $snode->{client}->{$service}->{graph_category}) and 
+		 ($snode->{client}->{$service}->{graph_category} ne $category));
+
+	my $fres  = &munin_service_status ($config, $limits, $domain, $node, $service);
+	if (defined $fres)
+	{
+	    if ($fres eq "critical")
+	    {
+		$state = $fres;
+		last;
+	    }
+	    elsif ($fres eq "warning")
+	    {
+		$state = $fres;
+	    }
+	}
+    }
+
+    return $state;
+}
+
+sub munin_service_status
+{
+    my ($config, $limits, $domain, $node, $service) = @_;
+    my $state = "ok";
+
+    return undef unless defined $config->{domain}->{$domain}->{node}->{$node}->{client}->{$service};
+    foreach my $key (keys %{$config->{domain}->{$domain}->{node}->{$node}->{client}->{$service}})
+    {
+	next unless $key =~ /^([^\.]+)\.label$/;
+	my $field = $1;
+	my $fres  = &munin_field_status ($config, $limits, $domain, $node, $service, $field);
+	if (defined $fres)
+	{
+	    if ($fres eq "critical")
+	    {
+		$state = $fres;
+		last;
+	    }
+	    elsif ($fres eq "warning")
+	    {
+		$state = $fres;
+	    }
+	}
+    }
+
+    return $state;
+}
+
 sub munin_field_status
 {
-    my ($config, $domain, $node, $service, $field) = @_;
+    my ($config, $limits, $domain, $node, $service, $field) = @_;
     my $state = undef;
 
     # Return undef if nagios is turned off, or the field doesn't have any limits
-    return undef unless (munin_get_bool ($config, "nagios", 1, $domain, $node, $service, $field));
     unless ((defined $config->{domain}->{$domain}->{node}->{$node}->{client}->{$service}->{"$field.warning"}) or
 	(defined $config->{domain}->{$domain}->{node}->{$node}->{client}->{$service}->{"$field.critical"}))
     {
 	return undef;
     }
 
-    my @critical = (undef, undef);
-    my @warning  = (undef, undef);
-    my $client   = $config->{domain}->{$domain}->{node}->{$node}->{client}->{$service};
-
-    # First we resolve the limits, and put them in some arrays
-    if (defined $client->{"$field.critical"} and 
-	$client->{"$field.critical"} =~ /^\s*([-\d]*):([-\d]*)\s*$/)
+    if (defined $limits->{domain}->{$domain}->{node}->{$node}->{client}->{$service}->{"$field.critical"})
     {
-	    $critical[0] = $1 if defined $1;
-	    $critical[1] = $2 if defined $2;
+	return "critical";
     }
-    elsif (defined $client->{"$field.critical"} and
-	$client->{"$field.critical"} =~ /^\s*([-\d]+)\s*$/)
+    elsif (defined $limits->{domain}->{$domain}->{node}->{$node}->{client}->{$service}->{"$field.warning"})
     {
-	    $critical[1] = $1 if defined $1;
+	return "warning";
     }
-    elsif (defined $client->{"$field.critical"})
+    else
     {
-	@critical = (0, 0);
+	return "ok";
     }
-    if (defined $client->{"$field.warning"} and 
-	$client->{"$field.warning"} =~ /^\s*([-\d]*):([-\d]*)\s*$/)
-    {
-	    $warning[0] = $1 if defined $1;
-	    $warning[1] = $2 if defined $2;
-    }
-    elsif (defined $client->{"$field.warning"} and
-	$client->{"$field.warning"} =~ /^\s*([-\d]+)\s*$/)
-    {
-	    $warning[1] = $1 if defined $1;
-    }
-    elsif (defined $client->{"$field.warning"})
-    {
-	@warning = (0, 0);
-    }
-
-    # Fetch the last values from the rrd file...
-    my $filename = &munin_get_filename ($domain, $node, $service, $field);
-    my $value = sprintf "%.2f",&munin_fetch($filename);
-
-    # Compare
-    if ((defined ($critical[0]) and $value < $critical[0]) or
-	(defined ($critical[1]) and $value > $critical[1])) 
-    {
-	$state = 'critical';
-    }
-    elsif ((defined ($warning[0]) and $value < $warning[0]) or
-	   (defined ($warning[1]) and $value > $warning[1])) 
-    {
-	$state = 'warning';
-    }
-    elsif ($value eq "U") 
-    {
-      $state = 'unknown';
-    }
-    else 
-    {
-      $state = 'ok';
-    }
-
-    return $state;
 }
 
 1;
