@@ -22,7 +22,7 @@
   <li><span class="domain"><a href="<TMPL_VAR NAME="DOMAIN">/index.html"><TMPL_VAR NAME="DOMAIN"></a></span>
       <ul>	
 	<TMPL_LOOP NAME="NODES">
-	<li><span class="host"><a href="<TMPL_VAR NAME="DOMAIN">/<TMPL_VAR NAME="NODE">.html"><TMPL_VAR NAME="NODE"></a></span> :: [ <TMPL_LOOP NAME="CATEGORIES"><a href="<TMPL_VAR NAME="DOMAIN">/<TMPL_VAR NAME="NODE">.html#<TMPL_VAR NAME="NAME">"><TMPL_VAR NAME="NAME"></a> </TMPL_LOOP>]</li>
+	<li><span class="host"><a href="<TMPL_VAR NAME="DOMAIN">/<TMPL_VAR NAME="NODE">.html"><TMPL_VAR NAME="NODE"></a></span> :: [ <TMPL_LOOP NAME="CATEGORIES"><TMPL_IF NAME="STATE_WARNING"><span class='warntext'></TMPL_IF><TMPL_IF NAME="STATE_CRITICAL"><span class='crittext'></TMPL_IF><a href="<TMPL_VAR NAME="DOMAIN">/<TMPL_VAR NAME="NODE">.html#<TMPL_VAR NAME="NAME">"><TMPL_VAR NAME="NAME"></a><TMPL_IF NAME="STATE_CRITICAL"></span></TMPL_IF><TMPL_IF NAME="STATE_WARNING"></span></TMPL_IF> </TMPL_LOOP>]</li>
         </TMPL_LOOP>
       </ul>
    </li>
