@@ -113,7 +113,7 @@ html>body .graphbox {
 
 .crittext {
   font-weight: bold;
-  background-color: #ff3f00;
+  background-color: #ff6f22;
 }
 
 a:link { 
