@@ -1,6 +1,8 @@
 munin (1.1.2)
 
   * The server programs now open the log file at an earlier point.
+  * Munin-limits added to distro.
+  * Warnings and criticals now show up in nodeview and overview.
 
 munin (1.1.1)
 
